[tool.poetry]
name = "template-data"
version = "0.1.0"
description = "Template repo for managing data for Prez"
authors = ["Jamie Feiss <jamie.feiss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^7.0.0"
pyshacl = "^0.25.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "I001",
    "I002"
]